--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <html lang="pt-br">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="style.css">
-   <link rel="stylesheet" href="estilo.css" type="text/css" media="all">
+	<link rel="stylesheet" href="estilo.css" type="text/css" media="all">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="style.css">
 	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">-->
+	<!--------------------------------------------------------------------->
+	<link href="/pace/themes/pace-theme-barber-shop.css" rel="stylesheet" />
 </head>
+
 <body>
-  <span class="img"><img src="img/logotipo.png"/></span>
+		<canvas id="counter-canvas" width="400" height="400"></canvas>
+
+
+	<span class="img"><img src="img/logotipo.png"/></span>
 	<div class="container">
 		<div class="inner">
+
+
+			<!------------------------------------------------------------->
+
+				<!-- Keypress: R = reset progress bar -->
+			<!-- Keypress: Space = pause progress bar -->
+
+		
+
 
 			<!-------------------------------------->
 			<div id="pagA">
@@ -25,7 +41,7 @@
       <button class="btn3" id="Id"  onClick="document.getElementById('pag0').style.display = 'block';"        onmouseup="document.getElementById('pagA').style.display = 'none'">Start Quizz</button>
       </div>
 			<div id="pag0">
-				<div id="logo">Ganhou</div>
+				<div id="logo"></div>
 				<!--Paginas dos slides - pag1, pag2, pag3 etc-->
 				<h2 class="qst">O que é risco de processo ?</h2>
 				<ul class="simpleList">
@@ -352,14 +368,15 @@
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <script src="script.js"></script>
-			  <script src="circlos.js"></script>
-				<script>
-				$(document).ready(function(){
-					// init
-						$(".cdev").circlos();
+			<script src="/pace/pace.js"></script>
+			<script src="circlos.js"></script>
+			<script>
+			$(document).ready(function(){
+				// init
+					$(".cdev").circlos();
 
 
-				});
-				</script>
+			});
+			</script>
   </body>
 </html>
