--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-		<canvas id="counter-canvas" width="400" height="400"></canvas>
+		<canvas id="counter-canvas" width="400" height="400">
+</canvas>
 
 
 	<span class="img"><img src="img/logotipo.png"/></span>
